<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="image_event">Display of Event Image</string>
    <string name="page_home">Home Page</string>
    <string name="detail_activity">Details Events</string>
    <string name="browser_open">Daftar Event</string>
    <string name="title_event">Event Title</string>
    <string name="details_event">Event Information Event Information Event Information Event Information Event Information Event Information Event Information Event InformationEvent Information Event Information Event InformationEvent Information Event Information Event Information Event Information Event Information Event Information Event Information</string>
    <string name="hint_searchbar">Find events here</string>
    <string name="title_upcoming_events">Soon Events</string>
    <string name="title_finished_events">Completed Events</string>
    <string name="title_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="Switch_darkMode">Switch to DarkMode</string>
    <string name="title_favorit_event">Favorite Events</string>
    <string name="start_event_time">Dimulai :</string>
    <string name="end_event_time">Berakhir :</string>
    <string name="kuota">Sisa Kuota :</string>
    <string name="Penyelenggara">Penyelenggara :"</string>
    <string name="event_date">Scheduled Date:</string>
    <string name="deafult_event_time">No Time Available</string>
    <string name="default_event_quota">No Available Quota</string>
    <string name="default_owner_name">No Owner Availavle</string>
    <string name="default_event_description">No Availale Description</string>
    <string name="error_event_name">Failed to load event</string>
    <string name="error_event_summary">Description not available</string>

</resources>
