<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="16dp"
    android:visibility="visible"
    android:id="@+id/card_past_event">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_event2"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_eventName"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title_finished_events"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_event2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.322" />

        <TextView
            android:id="@+id/tv_descEvent2"
            android:layout_width="210dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_eventName"
            app:layout_constraintStart_toEndOf="@id/img_event2"
            android:layout_marginLeft="10dp"
            android:text="@string/details_event"
            android:textSize="10sp"
            android:maxLines="6"
            android:textAlignment="viewStart"
            android:ellipsize="end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>