<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.ui.DetailActivity">



    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_daftar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detailActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:background="@color/primary"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"

                android:text="@string/detail_activity"
                android:textAlignment="center"
                android:textColor="@color/on_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/image_event"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detailActivity"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/title_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:maxLines="3"
                android:paddingBottom="10dp"
                android:text="@string/title_event"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_cover" />

            <View
                android:id="@+id/vw1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/surface"
                app:layout_constraintTop_toBottomOf="@id/title_event"></View>

            <TextView
                android:id="@+id/tv_mulai"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@color/on_background"
                android:paddingLeft="10dp"
                android:text="@string/start_event_time"
                android:textSize="11sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/vw1"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="@id/vw1" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColor="@color/on_background"
                android:text="@string/event_date"
                android:textSize="11sp"

                app:layout_constraintBottom_toBottomOf="@id/vw1"
                app:layout_constraintStart_toEndOf="@id/tv_mulai"
                app:layout_constraintTop_toTopOf="@id/vw1" />

            <TextView
                android:id="@+id/tv_berakhir"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="@color/on_background"
                android:paddingLeft="10dp"
                android:text="@string/end_event_time"
                android:textSize="11sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/vw1"
                app:layout_constraintStart_toEndOf="@id/start_time"
                app:layout_constraintTop_toTopOf="@id/vw1" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColor="@color/on_background"
                android:text="@string/event_date"
                android:textSize="11sp"

                app:layout_constraintBottom_toBottomOf="@id/vw1"
                app:layout_constraintStart_toEndOf="@id/tv_berakhir"
                app:layout_constraintTop_toTopOf="@id/vw1" />

            <View
                android:id="@+id/vw2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/primary_variant"
                app:layout_constraintTop_toBottomOf="@id/vw1" />


            <TextView
                android:id="@+id/kuota"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/kuota"
                android:textColor="@color/on_primary"
                android:textSize="11sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/vw2"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toTopOf="@id/vw2" />

            <TextView
                android:id="@+id/jml_kuota"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:textColor="@color/on_primary"
                android:textSize="11sp"

                app:layout_constraintBottom_toBottomOf="@id/vw2"
                app:layout_constraintStart_toEndOf="@id/kuota"
                app:layout_constraintTop_toTopOf="@id/vw2" />

            <TextView
                android:id="@+id/penyelenggara1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/Penyelenggara"
                android:textColor="@color/on_primary"
                android:textSize="11sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="@id/vw2"
                app:layout_constraintStart_toEndOf="@id/jml_kuota"
                app:layout_constraintTop_toTopOf="@id/vw2" />

            <TextView
                android:id="@+id/penyelenggara"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/event_date"
                android:textColor="@color/on_primary"
                android:textSize="11sp"

                app:layout_constraintBottom_toBottomOf="@id/vw2"
                app:layout_constraintStart_toEndOf="@id/penyelenggara1"
                app:layout_constraintTop_toTopOf="@id/vw2" />


            <TextView
                android:id="@+id/description_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:text="@string/details_event"
                app:layout_constraintTop_toBottomOf="@id/vw2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <ProgressBar
                android:id="@+id/progress_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/primary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Fab_Favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/title_favorit_event"
                android:soundEffectsEnabled="true"
                app:backgroundTint="@color/primary"
                app:elevation="7dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@id/title_event"
                app:layout_constraintEnd_toEndOf="@id/img_cover"
                app:layout_constraintTop_toTopOf="@id/img_cover"
                app:layout_constraintVertical_bias="0.742"
                app:srcCompat="@drawable/favorite_border"
                app:tint="@color/on_primary" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="409dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/browser_open"
        android:textColor="@color/on_primary"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>