<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="370dp"
    android:layout_height="280dp"
    android:id="@+id/card_soon_event"
    android:visibility="visible"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_event1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#AFFFC107"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/tv_soonEvent"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/title_upcoming_events"
            app:layout_constraintBottom_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end" />
        <TextView
            android:id="@+id/tv_descEvent1"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/details_event"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_soonEvent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAlignment="viewStart"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="250dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>